--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
       <div class="img1">
         <img src="img/Magazine-Nazir-1400x450.jpeg" alt="">
       </div>
-      <div class="textcontent bg-[#E1E5D5] w-56 absolute top-20">
-        <div class="content ">
-          <h1 class="title">University Magazine
+      <div class="textcontent  absolute top-20 left-14">
+        <div class="content bg-[#E1E5D5] w-[18rem] ">
+          <h1 class="title text-3xl px-2 py-2">University Magazine<br>
             2023</h1>
-          <h3 class="texts">Our summer issue celebrates the students, staff and alumni embodying our six values as they make their mark on the world.</h3>
+          <h3 class="texts px-2 py-2">Our summer issue celebrates the students, staff and alumni embodying our six values as they make their mark on the world.</h3>
         </div>
-        <div class="button bg-purple-800 text-white flex py-3">
+        <div class="button bg-purple-800 text-white flex py-3 w-[7rem] h-[3rem]">
           <h2>Read more</h2>
-          <img src="img/icon-moreArrow-right (1).png" alt="">
+          <img class="pl-4" src="img/icon-moreArrow-right (1).png" alt="">
         </div>
       </div>
     </div>
@@ -117,6 +117,74 @@
           </div>
           <h1>Our tailored support services and engaging activities for pupils of all ages will help make your job easier.</h1>
         </div>
+      </div>
+    </div>
+    <div class="body5 bg-[#EDEDED]">
+      <h1>Explore Manchester</h1>
+      <div class="imagess grid grid-cols-3 row-span-3">
+        <div class="box1 col-span-2">
+          <img class="" src="img/jodrell-050819.jpeg" alt="">
+        </div>
+        <div class="box2">
+          <img src="img/John-Rylands-Library-Deansgate-154-100320-edited.jpeg" alt="">
+          <img src="img/manchester-christmas-markets3.jpeg" alt="">
+        </div>
+        <div class="box3">
+          <img src="img/Manchester-Museum-180320-edited.jpeg" alt="">
+          
+        </div>
+      </div>
+    </div>
+    <div class="footer bg-[#1C1D1C]">
+      <div class="conta1 grid grid-cols-3 py-6 px-14">
+        <div class="contact">
+          <h1 class="text-white">Contact us</h1>
+          <ul class="text-[#ABAAAB]">
+            <li>+44 (0) 161 306 6000</li>
+            <li>Contact details</li>
+          </ul>
+        </div>
+        <div class="findus">
+          <h1 class="text-white">Find us</h1>
+          <ul class="text-[#ABAAAB]">
+            <li>The University of Manchester</li>
+            <li>Oxford Rd</li>
+            <li>Manchester</li>
+            <li>M13 9PL</li>
+            <li>UK</li>
+          </ul>
+        </div>
+        <div class="connectwith">
+          <h1 class="text-white">Connect with us</h1>
+          <ul class="text-[#ABAAAB]">
+            <li class="flex gap-2">
+              <img class="h-[3rem]" src="img/icon-facebook-50.png" alt="">
+              <img class="h-[3rem]" src="img/icon-twitter-50.png" alt="">
+              <img class="h-[3rem]" src="img/icon-youtube-50.png" alt="">
+              <img class="h-[3rem]" src="img/icon-instagram-50.svg" alt="">
+              <img class="h-[3rem]" src="img/icon-tiktok.svg" alt="">
+              <img src="img/icon-linkedin-R-54.png" alt="">
+            </li>
+            <li>Social media directory</li>
+          </ul>
+        </div>
+      </div>
+      <div class="conta2 border-t-[1px] border-[#818084]">
+        <ul class="text-[#ABAAAB] flex gap-2 px-14 py-5">
+          <li>Disclaimer</li>
+          <li>/</li>
+          <li>Data Protection</li>
+          <li>/</li>
+          <li>Copyright notice</li>
+          <li>/</li>
+          <li>Web accessibility</li>
+          <li>/</li>
+          <li>Freedom of information</li>
+          <li>/</li>
+          <li>Charitable status</li>
+          <li>/</li>
+          <li>Royal Charter Number: RC000797</li>
+        </ul>
       </div>
     </div>
   </div>
