--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <a href="#"><li>Connect</a></li>
             </ul>
         </div>
-        <div class="search border-[1px] mt-8 border-gray-300 flex text-2xl font-light">
-          <img class="h-6" src="img/icon-search-mobile.png" alt="">
+        <div class="search border-[1px] mt-6 border-gray-300 flex text-2xl font-light rounded-xl px-1 py-1 h-[3rem] ml-11">
+          <img class="h-9 pt-2 pr-1" src="img/icon-search-mobile.png" alt="">
           <h3>Search</h3>
         </div>
     </div>
@@ -64,9 +64,9 @@
       </div>
     </div>
     <div class="body3">
-      <div class="disco bg-[#EDEDED]">
-        <h1>Discover</h1>
-        <div class="vectors flex">
+      <div class="disco bg-[#EDEDED] pl-14 py-7">
+        <h1 class="text-4xl font-light">Discover</h1>
+        <div class="vectors flex gap-[12rem] pt-7">
           <div class="maps flex">
             <img src="img/icon-map-large.png" alt="">
             <div class="texts">
